<resources>
    <string name="app_name">SimonSays</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scoreboard">Scoreboard</string>
    <string name="score">Score : 0</string>
    <string name="scoreboard">Score: %1$d</string>
    <string name="scoreboard_message">Your score is:</string>
    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="welcome_title">Simon Says</string>
    <string name="welcome_play_game">Start</string>
    <string name="welcome_scoreboard">Leaderboard</string>
    <string name="scoreboard_restart">Start a New Game</string>
    <string name="title_activity_name_screen">NameScreen</string>
    <string name="name_message">Enter Name:</string>
    <string name="name_enter" />
    <string name="name_ready">Ready</string>
    <string name="main_name">Name: </string>
    <string name="scoreboard_board_message">LEADERBOARD</string>
    <string name="leaderboard_name">Name</string>
    <string name="leaderboard_score">Score</string>
</resources>
