<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/Red"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kevinwu.simonsays.WelcomeScreen"
    tools:showIn="@layout/activity_welcome_screen"
    android:clickable="false"
    android:id="@+id/background">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_play_game"
        android:id="@+id/play_game"
        android:layout_marginTop="98dp"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:onClick="startGame" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_scoreboard"
        android:id="@+id/scoreboard"
        android:layout_below="@+id/play_game"
        android:layout_centerHorizontal="true"
        android:onClick="toLeaderboard" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_title"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp" />
</RelativeLayout>
